# Lambdanaut-Blog

./: .gitignore  404.html  INSTALLATION.MD  Lambdanaut.cabal  Procfile  README.md  build-and-deploy.sh  build.sh  build_site.sh  contact.html  contact.md  copy_site.sh  deploy.sh  humans.txt  index.html  meta.html  meta.md  package.json  preview-site.sh  preview_site.sh  run  site.hs  stack.yaml  tags.html
css/: grid.css  main.css  reset.css
images/: footer-paradox.aseprite
mesclin-posts/: 2020-05-20-Hello-Pleroma.md
meta/: contact.html  index.html  projects.html
notes/: consciousness-wise-being.md
posts/: 1072-11-05-Multidimensional-Travel-Primer.md  2013-04-20-test.md  2013-04-30-Meaningful-Graffiti.md  2014-09-22-Hello-World.md  2015-02-17-Fart-Jokes.md  2016-02-23-Thank-You.md  2016-12-15-Yinyang(All or Nothing(Space and Time(Opposites Attract)))).md  2017-01-05-Oasis.md  2017-05-24-Buddhabot.md  2018-03-24-Teeny-Man.md  2018-04-02-A-Deer.md  2018-04-03-This-fly-started-talking-to-me-so-i-swatted-it-and-it-died.md  2018-04-14-flashback.md  2019-05-15-Bacon-Strips.md  2020-05-28-Hello-World.md  2020-06-25-How-To-Play-Picowars.md  2020-07-04-A*-Pathfinding-In-A-Platformer.md  2020-07-20-A-Chat-With-A-Malevolent-GPT-3.md  2020-07-23-A-Chat-With-GPT-3-About-Game-Development.md  2020-08-21-A-Chat-With-GPT3-About-Philosophy.md  2020-08-24-Rebooster-Mastodon-Boosting-Bot.md  2020-09-24-Discourses-On-Infinity.md  2020-09-24-Dry-Fast-1.md  2020-12-10-Tears.md  2021-07-19-My-Life-Right-Now.md  2022-08-17-Gamedev-Retrospective.md  2022-08-25-My-Minijam-113-Entry.md  (+9 more)
(+11 files in other folders)
