name:               Lambdanaut
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.1.1
                  , blaze-html==0.9.1.2
                  , containers==0.6.6
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
